// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders selected card 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    details={
        Array [
            Object {
              "age": "33",
            },
            Object {
              "fullname": "full name",
            },
          ]
    }
    label="name"
    selected={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <svg
          className="card__indicator"
          viewBox="0 0 100 100"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
>
          <g>
                    <path
                              d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                    />
                    <polygon
                              points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                    />
          </g>
</svg>,
        <div>
          <h1
                    className="card__label"
          >
                    name
          </h1>
          <div
                    className="card__attributes"
          >
                    <h5
                              className="card__attribute"
                    >
                              age
                              : 
                              33
                    </h5>
                    <h5
                              className="card__attribute"
                    >
                              fullname
                              : 
                              full name
                    </h5>
          </div>
</div>,
      ],
      "className": "card card--selected",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <g>
            <path
                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
            />
            <polygon
                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
            />
</g>,
          "className": "card__indicator",
          "viewBox": "0 0 100 100",
          "x": "0px",
          "xmlns": "http://www.w3.org/2000/svg",
          "y": "0px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <path
                d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
/>,
              <polygon
                points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "d": "M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z",
              },
              "ref": null,
              "rendered": null,
              "type": "path",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6",
              },
              "ref": null,
              "rendered": null,
              "type": "polygon",
            },
          ],
          "type": "g",
        },
        "type": "svg",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="card__label"
>
              name
</h1>,
            <div
              className="card__attributes"
>
              <h5
                            className="card__attribute"
              >
                            age
                            : 
                            33
              </h5>
              <h5
                            className="card__attribute"
              >
                            fullname
                            : 
                            full name
              </h5>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "name",
              "className": "card__label",
            },
            "ref": null,
            "rendered": "name",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h5
                  className="card__attribute"
>
                  age
                  : 
                  33
</h5>,
                <h5
                  className="card__attribute"
>
                  fullname
                  : 
                  full name
</h5>,
              ],
              "className": "card__attributes",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "age",
                    ": ",
                    "33",
                  ],
                  "className": "card__attribute",
                },
                "ref": null,
                "rendered": Array [
                  "age",
                  ": ",
                  "33",
                ],
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "fullname",
                    ": ",
                    "full name",
                  ],
                  "className": "card__attribute",
                },
                "ref": null,
                "rendered": Array [
                  "fullname",
                  ": ",
                  "full name",
                ],
                "type": "h5",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <svg
            className="card__indicator"
            viewBox="0 0 100 100"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
>
            <g>
                        <path
                                    d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                        />
                        <polygon
                                    points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                        />
            </g>
</svg>,
          <div>
            <h1
                        className="card__label"
            >
                        name
            </h1>
            <div
                        className="card__attributes"
            >
                        <h5
                                    className="card__attribute"
                        >
                                    age
                                    : 
                                    33
                        </h5>
                        <h5
                                    className="card__attribute"
                        >
                                    fullname
                                    : 
                                    full name
                        </h5>
            </div>
</div>,
        ],
        "className": "card card--selected",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <g>
              <path
                            d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
              />
              <polygon
                            points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
              />
</g>,
            "className": "card__indicator",
            "viewBox": "0 0 100 100",
            "x": "0px",
            "xmlns": "http://www.w3.org/2000/svg",
            "y": "0px",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <path
                  d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
/>,
                <polygon
                  points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
/>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "d": "M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z",
                },
                "ref": null,
                "rendered": null,
                "type": "path",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "points": "30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6",
                },
                "ref": null,
                "rendered": null,
                "type": "polygon",
              },
            ],
            "type": "g",
          },
          "type": "svg",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h1
                className="card__label"
>
                name
</h1>,
              <div
                className="card__attributes"
>
                <h5
                                className="card__attribute"
                >
                                age
                                : 
                                33
                </h5>
                <h5
                                className="card__attribute"
                >
                                fullname
                                : 
                                full name
                </h5>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "name",
                "className": "card__label",
              },
              "ref": null,
              "rendered": "name",
              "type": "h1",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="card__attribute"
>
                    age
                    : 
                    33
</h5>,
                  <h5
                    className="card__attribute"
>
                    fullname
                    : 
                    full name
</h5>,
                ],
                "className": "card__attributes",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "age",
                      ": ",
                      "33",
                    ],
                    "className": "card__attribute",
                  },
                  "ref": null,
                  "rendered": Array [
                    "age",
                    ": ",
                    "33",
                  ],
                  "type": "h5",
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "fullname",
                      ": ",
                      "full name",
                    ],
                    "className": "card__attribute",
                  },
                  "ref": null,
                  "rendered": Array [
                    "fullname",
                    ": ",
                    "full name",
                  ],
                  "type": "h5",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card component renders unselected card 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    details={
        Array [
            Object {
              "age": "33",
            },
          ]
    }
    label="name"
    selected={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <svg
          className="card__indicator"
          viewBox="0 0 100 100"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
>
          <g>
                    <path
                              d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                    />
                    <polygon
                              points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                    />
          </g>
</svg>,
        <div>
          <h1
                    className="card__label"
          >
                    name
          </h1>
          <div
                    className="card__attributes"
          >
                    <h5
                              className="card__attribute"
                    >
                              age
                              : 
                              33
                    </h5>
          </div>
</div>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <g>
            <path
                        d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
            />
            <polygon
                        points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
            />
</g>,
          "className": "card__indicator",
          "viewBox": "0 0 100 100",
          "x": "0px",
          "xmlns": "http://www.w3.org/2000/svg",
          "y": "0px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <path
                d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
/>,
              <polygon
                points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "d": "M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z",
              },
              "ref": null,
              "rendered": null,
              "type": "path",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "points": "30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6",
              },
              "ref": null,
              "rendered": null,
              "type": "polygon",
            },
          ],
          "type": "g",
        },
        "type": "svg",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="card__label"
>
              name
</h1>,
            <div
              className="card__attributes"
>
              <h5
                            className="card__attribute"
              >
                            age
                            : 
                            33
              </h5>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "name",
              "className": "card__label",
            },
            "ref": null,
            "rendered": "name",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h5
                  className="card__attribute"
>
                  age
                  : 
                  33
</h5>,
              ],
              "className": "card__attributes",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "age",
                    ": ",
                    "33",
                  ],
                  "className": "card__attribute",
                },
                "ref": null,
                "rendered": Array [
                  "age",
                  ": ",
                  "33",
                ],
                "type": "h5",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <svg
            className="card__indicator"
            viewBox="0 0 100 100"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
>
            <g>
                        <path
                                    d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
                        />
                        <polygon
                                    points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
                        />
            </g>
</svg>,
          <div>
            <h1
                        className="card__label"
            >
                        name
            </h1>
            <div
                        className="card__attributes"
            >
                        <h5
                                    className="card__attribute"
                        >
                                    age
                                    : 
                                    33
                        </h5>
            </div>
</div>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <g>
              <path
                            d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
              />
              <polygon
                            points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
              />
</g>,
            "className": "card__indicator",
            "viewBox": "0 0 100 100",
            "x": "0px",
            "xmlns": "http://www.w3.org/2000/svg",
            "y": "0px",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <path
                  d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
/>,
                <polygon
                  points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
/>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "d": "M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z",
                },
                "ref": null,
                "rendered": null,
                "type": "path",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "points": "30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6",
                },
                "ref": null,
                "rendered": null,
                "type": "polygon",
              },
            ],
            "type": "g",
          },
          "type": "svg",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h1
                className="card__label"
>
                name
</h1>,
              <div
                className="card__attributes"
>
                <h5
                                className="card__attribute"
                >
                                age
                                : 
                                33
                </h5>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "name",
                "className": "card__label",
              },
              "ref": null,
              "rendered": "name",
              "type": "h1",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="card__attribute"
>
                    age
                    : 
                    33
</h5>,
                ],
                "className": "card__attributes",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "age",
                      ": ",
                      "33",
                    ],
                    "className": "card__attribute",
                  },
                  "ref": null,
                  "rendered": Array [
                    "age",
                    ": ",
                    "33",
                  ],
                  "type": "h5",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
